css/footer.css
.footer-logo .logo-part {
    color: #f4f4fd;
}
.page-footer{
    background-color: #2e2f42;
    padding: 100px 0;
}
.footer-logo {
  display: inline-block;
  margin-bottom: 16px;
}
.footer-text {
    max-width: 264px;
    font-weight: 400;
font-size: 16px;
/* line-height: 24px; */ 
line-height: 1.5;
letter-spacing: 0.02em;
color: #f4f4fd;
}
.footer-container {
    display: flex;
    align-items: baseline;
}
.footer-logo-wrapper {
    margin-right: 120px;
}
.footer-social-text {
    margin-bottom: 16px;
    font-weight: 500;
    line-height: 1.5;
    letter-spacing: 0.02em;
    color: #fff;
}
.footer-social-list {
    display: flex;
    gap: 16px;
}
.footer-social-item {
    width: 40px;
    height: 40px;
}
.footer-social-link {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100%;
    border-radius: 50%;
    background-color: #4d5ae5;
    transition:
        background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
}
.footer-social-link:hover,
.footer-social-link:focus {
    background-color: #31d0aa;
}
.footer-social-link svg {
    fill: #f4f4fd;
}

